--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,3 +16,4 @@ clap = { version = "4.5.15", features = ["derive"] }
 tracing-chrome = "0.7.2"
 tracing-subscriber = "0.3.18"
 itertools = "0.13.0"
+glob = "0.3.1"
