--- a/rust/src-tauri/Cargo.toml
+++ b/rust/src-tauri/Cargo.toml
@@ -8,7 +8,6 @@ anyhow = "1.0.86"
 candle-core = "0.3"
 candle-nn = "0.3"
 candle-transformers = "0.3"
-serde = "1.0"
 serde_json = "1.0"
 tokenizers = "0.20"
 candle-token-classification = { git = "https://github.com/lavafroth/candle-token-classification", branch = "bump-tokenizers"}
@@ -17,3 +16,12 @@ tracing-chrome = "0.7.2"
 tracing-subscriber = "0.3.18"
 itertools = "0.13.0"
 glob = "0.3.1"
+tauri = { version = "1", features = ["shell-open"] }
+serde = { version = "1", features = ["derive"] }
+
+[build-dependencies]
+tauri-build = { version = "1", features = [] }
+
+[features]
+# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
+custom-protocol = ["tauri/custom-protocol"]
