--- a/micromamba.yml
+++ b/micromamba.yml
@@ -1,245 +1,174 @@
-name: cabinette
+name: bertner
 channels:
 - anaconda
+- pytorch
 dependencies:
 - _libgcc_mutex=0.1=main
 - _openmp_mutex=5.1=1_gnu
-- abseil-cpp=20211102.0=hd4dd3e8_0
-- aiofiles=22.1.0=py311h06a4308_0
-- aiohttp=3.8.5=py311h5eee18b_0
-- aiosignal=1.2.0=pyhd3eb1b0_0
-- aiosqlite=0.18.0=py311h06a4308_0
-- anyio=3.5.0=py311h06a4308_0
+- anyio=4.2.0=py310h06a4308_0
 - argon2-cffi=21.3.0=pyhd3eb1b0_0
-- argon2-cffi-bindings=21.2.0=py311h5eee18b_0
-- arrow-cpp=11.0.0=h374c478_2
+- argon2-cffi-bindings=21.2.0=py310h7f8727e_0
 - asttokens=2.0.5=pyhd3eb1b0_0
-- async-timeout=4.0.2=py311h06a4308_0
-- attrs=23.1.0=py311h06a4308_0
-- aws-c-common=0.6.8=h5eee18b_1
-- aws-c-event-stream=0.1.6=h6a678d5_6
-- aws-checksums=0.1.11=h5eee18b_2
-- aws-sdk-cpp=1.8.185=h721c034_1
-- babel=2.11.0=py311h06a4308_0
-- backcall=0.2.0=pyhd3eb1b0_0
-- beautifulsoup4=4.12.2=py311h06a4308_0
+- async-lru=2.0.4=py310h06a4308_0
+- attrs=23.1.0=py310h06a4308_0
+- babel=2.11.0=py310h06a4308_0
+- beautifulsoup4=4.12.3=py310h06a4308_0
 - blas=1.0=mkl
 - bleach=4.1.0=pyhd3eb1b0_0
-- boost-cpp=1.82.0=hdb19cb5_2
-- bottleneck=1.3.5=py311hbed6279_0
-- brotli-python=1.0.9=py311h6a678d5_7
-- bzip2=1.0.8=h7b6447c_0
-- c-ares=1.19.1=h5eee18b_0
-- ca-certificates=2023.08.22=h06a4308_0
-- certifi=2023.11.17=py311h06a4308_0
-- cffi=1.16.0=py311h5eee18b_0
-- charset-normalizer=2.0.4=pyhd3eb1b0_0
-- comm=0.1.2=py311h06a4308_0
-- cryptography=41.0.3=py311hdda0065_0
-- cudatoolkit=11.8.0=h6a678d5_0
-- cudnn=8.9.2.26=cuda11_0
-- cupti=11.8.0=he078b1a_0
+- bottleneck=1.3.7=py310ha9d4c09_0
+- brotli-python=1.0.9=py310h6a678d5_8
+- bzip2=1.0.8=h5eee18b_6
+- ca-certificates=2024.7.2=h06a4308_0
+- certifi=2024.7.4=py310h06a4308_0
+- cffi=1.16.0=py310h5eee18b_1
+- charset-normalizer=3.3.2=pyhd3eb1b0_0
+- comm=0.2.1=py310h06a4308_0
+- cudatoolkit=11.3.1=h2bc3f7f_2
 - cyrus-sasl=2.1.28=h52b45da_1
-- datasets=2.12.0=py311h06a4308_0
 - dbus=1.13.18=hb2f20db_0
-- debugpy=1.6.7=py311h6a678d5_0
+- debugpy=1.6.7=py310h6a678d5_0
 - decorator=5.1.1=pyhd3eb1b0_0
 - defusedxml=0.7.1=pyhd3eb1b0_0
-- dill=0.3.6=py311h06a4308_0
-- entrypoints=0.4=py311h06a4308_0
+- exceptiongroup=1.2.0=py310h06a4308_0
 - executing=0.8.3=pyhd3eb1b0_0
-- expat=2.5.0=h6a678d5_0
-- filelock=3.9.0=py311h06a4308_0
-- fontconfig=2.14.1=h4c34cd2_2
+- expat=2.6.2=h6a678d5_0
+- fontconfig=2.14.1=h55d465d_3
 - freetype=2.12.1=h4a9f257_0
-- frozenlist=1.4.0=py311h5eee18b_0
-- fsspec=2023.9.2=py311h06a4308_0
-- gflags=2.2.2=he6710b0_0
-- glib=2.69.1=he621ea3_2
-- glog=0.5.0=h2531618_0
-- gmp=6.2.1=h295c915_3
-- gmpy2=2.1.2=py311hc9b5ff0_0
-- grpc-cpp=1.48.2=he1ff14a_1
+- glib=2.78.4=h6a678d5_0
+- glib-tools=2.78.4=h6a678d5_0
 - gst-plugins-base=1.14.1=h6a678d5_1
 - gstreamer=1.14.1=h5eee18b_1
-- huggingface_hub=0.17.3=py311h06a4308_0
 - icu=73.1=h6a678d5_0
-- idna=3.4=py311h06a4308_0
-- importlib-metadata=6.0.0=py311h06a4308_0
+- idna=3.7=py310h06a4308_0
 - intel-openmp=2023.1.0=hdb19cb5_46306
-- ipykernel=6.25.0=py311h92b7b1e_0
-- ipython=8.15.0=py311h06a4308_0
-- ipython_genutils=0.2.0=pyhd3eb1b0_1
-- ipywidgets=8.0.4=py311h06a4308_0
-- jedi=0.18.1=py311h06a4308_1
-- jinja2=3.1.2=py311h06a4308_0
-- joblib=1.2.0=py311h06a4308_0
-- jpeg=9e=h5eee18b_1
+- ipykernel=6.28.0=py310h06a4308_0
+- ipython=8.25.0=py310h06a4308_0
+- ipywidgets=8.1.2=py310h06a4308_0
+- jedi=0.19.1=py310h06a4308_0
+- jinja2=3.1.4=py310h06a4308_0
+- jpeg=9e=h5eee18b_3
 - json5=0.9.6=pyhd3eb1b0_0
-- jsonschema=4.19.2=py311h06a4308_0
-- jsonschema-specifications=2023.7.1=py311h06a4308_0
-- jupyter=1.0.0=py311h06a4308_8
-- jupyter_client=7.4.9=py311h06a4308_0
-- jupyter_console=6.6.3=py311h06a4308_0
-- jupyter_core=5.5.0=py311h06a4308_0
-- jupyter_events=0.8.0=py311h06a4308_0
-- jupyter_server=1.23.4=py311h06a4308_0
-- jupyter_server_fileid=0.9.0=py311h06a4308_0
-- jupyter_server_ydoc=0.8.0=py311h06a4308_1
-- jupyter_ydoc=0.2.4=py311h06a4308_0
-- jupyterlab=3.6.3=py311h06a4308_0
-- jupyterlab_pygments=0.2.2=py311h06a4308_0
-- jupyterlab_server=2.25.1=py311h06a4308_0
-- jupyterlab_widgets=3.0.9=py311h06a4308_0
+- jsonschema=4.19.2=py310h06a4308_0
+- jsonschema-specifications=2023.7.1=py310h06a4308_0
+- jupyter=1.0.0=py310h06a4308_9
+- jupyter-lsp=2.2.0=py310h06a4308_0
+- jupyter_client=8.6.0=py310h06a4308_0
+- jupyter_console=6.6.3=py310h06a4308_0
+- jupyter_core=5.7.2=py310h06a4308_0
+- jupyter_events=0.10.0=py310h06a4308_0
+- jupyter_server=2.14.1=py310h06a4308_0
+- jupyter_server_terminals=0.4.4=py310h06a4308_1
+- jupyterlab=4.0.11=py310h06a4308_0
+- jupyterlab_pygments=0.1.2=py_0
+- jupyterlab_server=2.25.1=py310h06a4308_0
+- jupyterlab_widgets=3.0.10=py310h06a4308_0
 - krb5=1.20.1=h143b758_1
 - ld_impl_linux-64=2.38=h1181459_1
-- libboost=1.82.0=h109eef0_2
-- libbrotlicommon=1.0.9=h5eee18b_7
-- libbrotlidec=1.0.9=h5eee18b_7
-- libbrotlienc=1.0.9=h5eee18b_7
 - libclang=14.0.6=default_hc6dbbc7_1
 - libclang13=14.0.6=default_he11475f_1
 - libcups=2.4.2=h2d74bed_1
-- libcurl=7.88.1=h251f7ec_2
-- libedit=3.1.20221030=h5eee18b_0
-- libev=4.33=h7f8727e_1
-- libevent=2.1.12=hdbd6064_1
-- libffi=3.4.4=h6a678d5_0
+- libedit=3.1.20230828=h5eee18b_0
+- libffi=3.4.4=h6a678d5_1
 - libgcc-ng=11.2.0=h1234567_1
-- libgfortran-ng=11.2.0=h00389a5_1
-- libgfortran5=11.2.0=h1234567_1
+- libglib=2.78.4=hdc74915_0
 - libgomp=11.2.0=h1234567_1
+- libiconv=1.16=h5eee18b_3
 - libllvm14=14.0.6=hdb19cb5_3
-- libnghttp2=1.57.0=h2d74bed_0
-- libopenblas=0.3.21=h043d6bf_0
 - libpng=1.6.39=h5eee18b_0
-- libpq=12.15=hdbd6064_1
-- libprotobuf=3.20.3=he621ea3_0
+- libpq=12.17=hdbd6064_0
 - libsodium=1.0.18=h7b6447c_0
-- libssh2=1.10.0=hdbd6064_2
 - libstdcxx-ng=11.2.0=h1234567_1
-- libthrift=0.15.0=h1795dd8_2
 - libuuid=1.41.5=h5eee18b_0
 - libxcb=1.15=h7f8727e_0
-- libxkbcommon=1.0.1=h5eee18b_1
-- libxml2=2.10.4=hf1b16e4_1
-- lz4-c=1.9.4=h6a678d5_0
-- magma=2.7.1=h2c23e93_0
-- markupsafe=2.1.1=py311h5eee18b_0
-- matplotlib-inline=0.1.6=py311h06a4308_0
-- mistune=2.0.4=py311h06a4308_0
+- libxkbcommon=1.0.1=h097e994_2
+- libxml2=2.13.1=hfdd30dd_2
+- lz4-c=1.9.4=h6a678d5_1
+- markupsafe=2.1.3=py310h5eee18b_0
+- matplotlib-inline=0.1.6=py310h06a4308_0
+- mistune=2.0.4=py310h06a4308_0
 - mkl=2023.1.0=h213fc3f_46344
-- mkl-service=2.4.0=py311h5eee18b_1
-- mkl_fft=1.3.8=py311h5eee18b_0
-- mkl_random=1.2.4=py311hdb19cb5_0
-- mpc=1.1.0=h10f8cd9_1
-- mpfr=4.0.2=hb69a4c5_1
-- mpmath=1.3.0=py311h06a4308_0
-- multidict=6.0.2=py311h5eee18b_0
-- multiprocess=0.70.14=py311h06a4308_0
+- mkl-service=2.4.0=py310h5eee18b_1
+- mkl_fft=1.3.8=py310h5eee18b_0
+- mkl_random=1.2.4=py310hdb19cb5_0
 - mysql=5.7.24=h721c034_2
-- nbclassic=1.0.0=py311h06a4308_0
-- nbclient=0.8.0=py311h06a4308_0
-- nbconvert=7.10.0=py311h06a4308_0
-- nbformat=5.9.2=py311h06a4308_0
+- nbclient=0.8.0=py310h06a4308_0
+- nbconvert=7.10.0=py310h06a4308_0
+- nbformat=5.9.2=py310h06a4308_0
 - ncurses=6.4=h6a678d5_0
-- nest-asyncio=1.5.6=py311h06a4308_0
-- networkx=3.1=py311h06a4308_0
-- ninja=1.10.2=h06a4308_5
-- ninja-base=1.10.2=hd09550d_5
-- notebook=6.5.4=py311h06a4308_1
-- notebook-shim=0.2.3=py311h06a4308_0
-- numexpr=2.8.7=py311h65dcdc2_0
-- numpy=1.26.0=py311h08b1b3b_0
-- numpy-base=1.26.0=py311hf175353_0
-- openssl=3.0.12=h7f8727e_0
-- orc=1.7.4=hb3bc3d3_1
-- packaging=23.1=py311h06a4308_0
-- pandas=2.1.1=py311ha02d727_0
+- nest-asyncio=1.6.0=py310h06a4308_0
+- notebook=7.0.8=py310h06a4308_2
+- notebook-shim=0.2.3=py310h06a4308_0
+- numexpr=2.8.7=py310h85018f9_0
+- numpy=1.26.4=py310h5f9d8c6_0
+- numpy-base=1.26.4=py310hb5e798b_0
+- openssl=3.0.14=h5eee18b_0
+- overrides=7.4.0=py310h06a4308_0
+- packaging=24.1=py310h06a4308_0
+- pandas=2.2.2=py310h6a678d5_0
 - pandocfilters=1.5.0=pyhd3eb1b0_0
 - parso=0.8.3=pyhd3eb1b0_0
-- pcre=8.45=h295c915_0
+- pcre2=10.42=hebb0a14_1
 - pexpect=4.8.0=pyhd3eb1b0_3
-- pickleshare=0.7.5=pyhd3eb1b0_1003
-- pip=23.3=py311h06a4308_0
-- platformdirs=3.10.0=py311h06a4308_0
-- ply=3.11=py311h06a4308_0
-- prometheus_client=0.14.1=py311h06a4308_0
-- prompt-toolkit=3.0.36=py311h06a4308_0
-- prompt_toolkit=3.0.36=hd3eb1b0_0
-- psutil=5.9.0=py311h5eee18b_0
+- pip=24.2=py310h06a4308_0
+- platformdirs=3.10.0=py310h06a4308_0
+- ply=3.11=py310h06a4308_0
+- prometheus_client=0.14.1=py310h06a4308_0
+- prompt-toolkit=3.0.43=py310h06a4308_0
+- prompt_toolkit=3.0.43=hd3eb1b0_0
+- psutil=5.9.0=py310h5eee18b_0
 - ptyprocess=0.7.0=pyhd3eb1b0_2
 - pure_eval=0.2.2=pyhd3eb1b0_0
-- pyarrow=11.0.0=py311hd8e8d9b_1
 - pycparser=2.21=pyhd3eb1b0_0
-- pygments=2.15.1=py311h06a4308_1
-- pyopenssl=23.2.0=py311h06a4308_0
-- pyqt=5.15.10=py311h6a678d5_0
-- pyqt5-sip=12.13.0=py311h5eee18b_0
-- pysocks=1.7.1=py311h06a4308_0
-- python=3.11.5=h955ad1f_0
-- python-dateutil=2.8.2=pyhd3eb1b0_0
-- python-fastjsonschema=2.16.2=py311h06a4308_0
-- python-json-logger=2.0.7=py311h06a4308_0
+- pygments=2.15.1=py310h06a4308_1
+- pyqt=5.15.10=py310h6a678d5_0
+- pyqt5-sip=12.13.0=py310h5eee18b_0
+- pysocks=1.7.1=py310h06a4308_0
+- python=3.10.14=h955ad1f_1
+- python-dateutil=2.9.0post0=py310h06a4308_2
+- python-fastjsonschema=2.16.2=py310h06a4308_0
+- python-json-logger=2.0.7=py310h06a4308_0
 - python-tzdata=2023.3=pyhd3eb1b0_0
-- python-xxhash=2.0.2=py311h5eee18b_1
-- pytorch=2.0.1=gpu_cuda118py311hce0f3bd_0
-- pytz=2023.3.post1=py311h06a4308_0
-- pyyaml=6.0.1=py311h5eee18b_0
-- pyzmq=23.2.0=py311h6a678d5_0
+- pytorch=1.12.1=py3.10_cuda11.3_cudnn8.3.2_0
+- pytorch-mutex=1.0=cuda
+- pytz=2024.1=py310h06a4308_0
+- pyyaml=6.0.1=py310h5eee18b_0
+- pyzmq=25.1.2=py310h6a678d5_0
 - qt-main=5.15.2=h53bd1ea_10
-- qtconsole=5.5.0=py311h06a4308_0
-- qtpy=2.4.1=py311h06a4308_0
-- re2=2022.04.01=h295c915_0
+- qtconsole=5.5.1=py310h06a4308_0
+- qtpy=2.4.1=py310h06a4308_0
 - readline=8.2=h5eee18b_0
-- referencing=0.30.2=py311h06a4308_0
-- regex=2023.10.3=py311h5eee18b_0
-- requests=2.31.0=py311h06a4308_0
-- responses=0.13.3=pyhd3eb1b0_0
-- rfc3339-validator=0.1.4=py311h06a4308_0
-- rfc3986-validator=0.1.1=py311h06a4308_0
-- rpds-py=0.10.6=py311hb02cf49_0
-- safetensors=0.4.0=py311h24d97f6_0
-- scikit-learn=1.2.2=py311h6a678d5_1
-- scipy=1.11.3=py311h08b1b3b_0
-- send2trash=1.8.2=py311h06a4308_0
-- setuptools=68.0.0=py311h06a4308_0
-- sip=6.7.12=py311h6a678d5_0
+- referencing=0.30.2=py310h06a4308_0
+- requests=2.32.3=py310h06a4308_0
+- rfc3339-validator=0.1.4=py310h06a4308_0
+- rfc3986-validator=0.1.1=py310h06a4308_0
+- rpds-py=0.10.6=py310hb02cf49_0
+- send2trash=1.8.2=py310h06a4308_0
+- setuptools=72.1.0=py310h06a4308_0
+- sip=6.7.12=py310h6a678d5_0
 - six=1.16.0=pyhd3eb1b0_1
-- snappy=1.1.9=h295c915_0
-- sniffio=1.2.0=py311h06a4308_1
-- soupsieve=2.5=py311h06a4308_0
-- sqlite=3.41.2=h5eee18b_0
+- sniffio=1.3.0=py310h06a4308_0
+- soupsieve=2.5=py310h06a4308_0
+- sqlite=3.45.3=h5eee18b_0
 - stack_data=0.2.0=pyhd3eb1b0_0
-- sympy=1.11.1=py311h06a4308_0
 - tbb=2021.8.0=hdb19cb5_0
-- terminado=0.17.1=py311h06a4308_0
-- threadpoolctl=2.2.0=pyh0d69192_0
-- tinycss2=1.2.1=py311h06a4308_0
-- tk=8.6.12=h1ccaba5_0
-- tokenizers=0.13.3=py311h22610ee_0
-- tornado=6.3.3=py311h5eee18b_0
-- tqdm=4.65.0=py311h92b7b1e_0
-- traitlets=5.7.1=py311h06a4308_0
-- transformers=4.32.1=py311h06a4308_0
-- typing-extensions=4.7.1=py311h06a4308_0
-- typing_extensions=4.7.1=py311h06a4308_0
-- tzdata=2023c=h04d1e81_0
-- urllib3=1.26.18=py311h06a4308_0
-- utf8proc=2.6.1=h27cfd23_0
+- terminado=0.17.1=py310h06a4308_0
+- tinycss2=1.2.1=py310h06a4308_0
+- tk=8.6.14=h39e8969_0
+- tomli=2.0.1=py310h06a4308_0
+- tornado=6.4.1=py310h5eee18b_0
+- traitlets=5.14.3=py310h06a4308_0
+- typing-extensions=4.11.0=py310h06a4308_0
+- typing_extensions=4.11.0=py310h06a4308_0
+- tzdata=2024a=h04d1e81_0
+- urllib3=2.2.2=py310h06a4308_0
 - wcwidth=0.2.5=pyhd3eb1b0_0
-- webencodings=0.5.1=py311h06a4308_1
-- websocket-client=0.58.0=py311h06a4308_4
-- wheel=0.41.2=py311h06a4308_0
-- widgetsnbextension=4.0.5=py311h06a4308_0
-- xxhash=0.8.0=h7f8727e_3
-- xz=5.4.2=h5eee18b_0
-- y-py=0.5.9=py311h52d8a92_0
+- webencodings=0.5.1=py310h06a4308_1
+- websocket-client=1.8.0=py310h06a4308_0
+- wheel=0.43.0=py310h06a4308_0
+- widgetsnbextension=4.0.10=py310h06a4308_0
+- xz=5.4.6=h5eee18b_1
 - yaml=0.2.5=h7b6447c_0
-- yarl=1.8.1=py311h5eee18b_0
-- ypy-websocket=0.8.2=py311h06a4308_0
-- zeromq=4.3.4=h2531618_0
-- zipp=3.11.0=py311h06a4308_0
-- zlib=1.2.13=h5eee18b_0
-- zstd=1.5.5=hc292b87_0
+- zeromq=4.3.5=h6a678d5_0
+- zlib=1.2.13=h5eee18b_1
+- zstd=1.5.5=hc292b87_2
 
