--- a/rust/src-tauri/Cargo.toml
+++ b/rust/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ itertools = "0.13.0"
 glob = "0.3.1"
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
+bincode = "1.3.3"
 
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
